# spdx3ToGraph

./: README.md  entr_puml.sh  pyproject.toml
spdx3_to_graph/: __main__.py  spdx30.py  spdx3_to_graph.py
test_data/: .gitignore
test_data/cross-reference/: doc-0.spdx.json  doc-1.spdx.json
